@@ -1,3 +1,8 @@
+master
+------
+
+* Fix issue where Jenkins environment variables were required on first launch
+
 Version 0.11.8
 --------------
 
